Fix layout issues

--- a/0x03-responsive_design/02-styles.css
+++ b/0x03-responsive_design/02-styles.css
@@ -177,6 +177,11 @@
     clip: rect(1px, 1px, 1px, 1px);
     white-space: nowrap;
   }
+
+  main img {
+    width: 100%;
+    height: auto;
+  }
   
   /*** 2. LAYOUT ***/
   
@@ -212,6 +217,26 @@
   
   .col-1-2 {
     width: calc((100% / 2) - 2rem);
+  }
+
+  @media screen and (max-width: 767px) {
+    :root {
+      --section-padding: 5rem 1.5rem;
+      --section-body-padding: 2rem 0 0;
+    }
+    ul.row, row {
+      flex-direction: column;
+      margin: 0;
+    }
+    [class^="col-"] {
+          margin: 0 0 3rem 0;
+    }
+
+    .col-1-3, .col-1-2 {
+          width: 100%;
+    }
+
+    
   }
   
   /* Navbar
@@ -261,6 +286,12 @@
   .nav .nav-item:hover .nav-link::before {
     background-color: var(--color-primary);
     width: 100%;
+  }
+
+  @media screen and (max-width: 767px) {
+    .navbar-menu {
+      display: none;
+    }    
   }
   
   /* Header
@@ -399,6 +430,12 @@
   
   .section-latest-news .row {
     flex-direction: row-reverse;
+  }
+
+  @media screen and (max-width: 767px) {
+    .section-latest-news .row {
+      flex-direction: column;
+    }    
   }
   
   /* Section SERVICES
@@ -859,4 +896,4 @@
     cursor: text;
     margin: 0 1rem;
   }
-    
+  
